# hehormeh

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci_action.yml
archive/2024/: stats.ipynb
archive/2024/db/: ip_to_user.csv  user_to_image.csv  votes.csv
categories/: 2023.json  2024.json
hehormeh/: app.py  cli.py  config.py  utils.py
hehormeh/templates/: admin.html  index.html  login.html  qr.html  scoreboard.html  style.css  upload.html  vote.html
scripts/: simulate_upload.py  simulate_voting.py
static/styles/: style.css
templates/: categories.html  category.html  index.html  login.html  style.css  upload.html
